namespace HUF.Ads.Implementation
{
    public enum AdResult
    {
        None = 0,
        Completed = 1,
        Skipped = 2,
        Failed = 3
    }
}