namespace HUF.Ads.Implementation
{
    public enum PlacementType
    {
        Banner = 0,
        Interstitial = 1,
        Rewarded = 2
    }
}